<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".EndGameDialog">

    <TextView
        android:id="@+id/winner"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/player1win"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/numMoves"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/moves"
        app:layout_constraintStart_toStartOf="@+id/moves"
        app:layout_constraintTop_toBottomOf="@+id/moves" />

    <TextView
        android:id="@+id/moves"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/moves"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="@+id/winner"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/timer"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/timer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/time"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/time"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/winner"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:backgroundTint="@color/black"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numMoves" />

    <View
        android:id="@+id/divider"
        android:backgroundTint="@color/black"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/newGme"
        android:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/keepPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/keepPlaying"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/newGame"
        app:layout_constraintStart_toStartOf="@+id/newGame"
        app:layout_constraintTop_toBottomOf="@+id/newGame" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="@+id/keepPlaying"
        app:layout_constraintStart_toStartOf="@+id/keepPlaying"
        app:layout_constraintTop_toBottomOf="@+id/keepPlaying" />

</androidx.constraintlayout.widget.ConstraintLayout>